syntax = "proto3";
package gloo.solo.io;
option go_package = "github.com/solo-io/gloo/projects/gloo/pkg/api/v1";

import "google/protobuf/struct.proto";

import "extproto/ext.proto";
option (extproto.equal_all) = true;
option (extproto.hash_all) = true;
option (extproto.clone_all) = true;

import "github.com/solo-io/gloo/projects/gloo/api/v1/extensions.proto";
import "github.com/solo-io/gloo/projects/gloo/api/v1/filters/stages.proto";
import "github.com/solo-io/gloo/projects/gloo/api/v1/options/cors/cors.proto";
import "github.com/solo-io/gloo/projects/gloo/api/v1/options/rest/rest.proto";
import "github.com/solo-io/gloo/projects/gloo/api/v1/options/grpc/grpc.proto";
import "github.com/solo-io/gloo/projects/gloo/api/v1/options/als/als.proto";
import "github.com/solo-io/gloo/projects/gloo/api/v1/options/proxy_protocol/proxy_protocol.proto";
import "github.com/solo-io/gloo/projects/gloo/api/v1/options/grpc_web/grpc_web.proto";
import "github.com/solo-io/gloo/projects/gloo/api/v1/options/grpc_json/grpc_json.proto";
import "github.com/solo-io/gloo/projects/gloo/api/v1/options/hcm/hcm.proto";
import "github.com/solo-io/gloo/projects/gloo/api/v1/options/header_validation/header_validation.proto";
import "github.com/solo-io/gloo/projects/gloo/api/v1/options/lbhash/lbhash.proto";
import "github.com/solo-io/gloo/projects/gloo/api/v1/options/shadowing/shadowing.proto";
import "github.com/solo-io/gloo/projects/gloo/api/v1/options/tcp/tcp.proto";
import "github.com/solo-io/gloo/projects/gloo/api/v1/options/tracing/tracing.proto";
import "github.com/solo-io/gloo/projects/gloo/api/v1/options/retries/retries.proto";
import "github.com/solo-io/gloo/projects/gloo/api/v1/options/stats/stats.proto";
import "github.com/solo-io/gloo/projects/gloo/api/v1/options/faultinjection/fault.proto";
import "github.com/solo-io/gloo/projects/gloo/api/v1/options/headers/headers.proto";
import "github.com/solo-io/gloo/projects/gloo/api/v1/options/aws/aws.proto";
import "github.com/solo-io/gloo/projects/gloo/api/v1/options/wasm/wasm.proto";
import "github.com/solo-io/gloo/projects/gloo/api/v1/options/azure/azure.proto";
import "github.com/solo-io/gloo/projects/gloo/api/v1/options/healthcheck/healthcheck.proto";
import "github.com/solo-io/gloo/projects/gloo/api/v1/options/protocol_upgrade/protocol_upgrade.proto";
import "github.com/solo-io/gloo/projects/gloo/api/v1/options/router/router.proto";
import "github.com/solo-io/gloo/projects/gloo/api/v1/options/connection_limit/connection_limit.proto";
import "github.com/solo-io/gloo/projects/gloo/api/v1/options/local_ratelimit/local_ratelimit.proto";

import "github.com/solo-io/gloo/projects/gloo/api/external/envoy/extensions/proxylatency/proxylatency.proto";
import "github.com/solo-io/gloo/projects/gloo/api/external/envoy/extensions/filters/http/buffer/v3/buffer.proto";
import "github.com/solo-io/gloo/projects/gloo/api/external/envoy/extensions/filters/http/csrf/v3/csrf.proto";
import "github.com/solo-io/gloo/projects/gloo/api/external/envoy/config/filter/http/gzip/v2/gzip.proto";
import "github.com/solo-io/gloo/projects/gloo/api/external/envoy/type/matcher/v3/regex.proto";

import "github.com/solo-io/gloo/projects/gloo/api/v1/enterprise/options/extauth/v1/extauth.proto";
import "github.com/solo-io/gloo/projects/gloo/api/v1/enterprise/options/extproc/extproc.proto";
import "github.com/solo-io/gloo/projects/gloo/api/v1/enterprise/options/jwt/jwt.proto";
import "github.com/solo-io/gloo/projects/gloo/api/v1/enterprise/options/ratelimit/ratelimit.proto";
import "github.com/solo-io/gloo/projects/gloo/api/v1/enterprise/options/caching/caching.proto";
import "github.com/solo-io/gloo/projects/gloo/api/v1/enterprise/options/rbac/rbac.proto";
import "github.com/solo-io/gloo/projects/gloo/api/v1/enterprise/options/waf/waf.proto";
import "github.com/solo-io/gloo/projects/gloo/api/v1/enterprise/options/dlp/dlp.proto";
import "github.com/solo-io/gloo/projects/gloo/api/v1/enterprise/options/tap/tap.proto";
import "github.com/solo-io/gloo/projects/gloo/api/v1/enterprise/options/ai/ai.proto";
import "github.com/solo-io/gloo/projects/gloo/api/v1/options/transformation/transformation.proto";
import "github.com/solo-io/gloo/projects/gloo/api/v1/options/dynamic_forward_proxy/dynamic_forward_proxy.proto";
import "github.com/solo-io/gloo/projects/gloo/api/v1/enterprise/options/stateful_session/stateful_session.proto";

import "github.com/solo-io/solo-kit/api/external/envoy/api/v2/core/base.proto";
import "github.com/solo-io/solo-kit/api/external/envoy/api/v2/core/socket_option.proto";

import "google/protobuf/duration.proto";
import "google/protobuf/wrappers.proto";


// Optional, feature-specific configuration that lives on tcp listeners
message TcpListenerOptions {
    tcp.options.gloo.solo.io.TcpProxySettings tcp_proxy_settings = 3;

    // ConnectionLimit can be used to limit the number of active connections per gateway. Useful for resource protection as well as DoS prevention.
    connection_limit.options.gloo.solo.io.ConnectionLimit connection_limit = 4;

    // LocalRatelimit can be used to rate limit the connections per gateway at the L4 layer.
    // It uses envoy's own local rate limit filter to do so, without the need for an external rate limit server to be set up.
    local_ratelimit.options.gloo.solo.io.TokenBucket local_ratelimit = 5;

}